// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Select Component when has default props 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  width: 100%;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  height: 64px;
  gap: 0.5rem;
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: content-box;
  width: calc(100% - 2 * 1rem);
  border-radius: 8px;
  padding: 0.625rem 0.9375rem;
  background-color: #FFFFFF;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  box-shadow: 0px 0px 0px 3px #003FF229;
  border: 1px solid;
  border-color: #8DC6FF;
}

.c3 {
  color: #455A73;
  font-size: 0.8125rem;
  font-weight: 500;
  line-height: 1.056rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
  top: unset;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  line-height: 1.0625rem;
  text-align: left;
}

.c5 {
  color: #00224B;
  font-size: 1.0625rem;
  font-weight: 400;
  line-height: 1.381rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
  display: block;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  line-height: 1.375rem;
  text-align: left;
}

.c5:-webkit-autofill,
.c5:-internal-autofill-selected {
  -webkit-animation-name: onAutoFillStart;
  animation-name: onAutoFillStart;
  -webkit-text-fill-color: #455A73;
  box-shadow: inset 0 0 0 100em #FFFFFF;
}

.c5:not(:-webkit-autofill) {
  -webkit-animation-name: onAutoFillCancel;
  animation-name: onAutoFillCancel;
}

.c7 {
  display: block;
  height: 24px;
  width: 24px;
  position: relative;
  margin: 0.5625rem 0px;
}

.c9 {
  -webkit-mask-image: url(https://qa-static.cashme.com.br/icons/chevron-down.svg);
  mask-image: url(https://qa-static.cashme.com.br/icons/chevron-down.svg);
  background-color: #69788C;
  background-image: none;
  background-size: 24px;
  width: 24px;
  height: 24px;
  -webkit-mask-position-x: 0;
  mask-position-x: 0;
  -webkit-mask-size: 24px;
  mask-size: 24px;
  -webkit-mask-repeat: no-repeat;
  mask-repeat: no-repeat;
}

.c10 {
  visibility: hidden;
  pointer-events: none;
  opacity: 0;
  -webkit-transition: visibility 0.1s,opacity ease 0.3s;
  transition: visibility 0.1s,opacity ease 0.3s;
  z-index: 10;
}

.c10[data-Popper-reference-hidden='true'] {
  visibility: hidden;
  pointer-events: none;
}

.c8 {
  grid-area: icon;
}

.c2 {
  display: grid;
  grid-template: 'label icon' 1.0625rem 'input icon' 1.375rem / minmax(0,1fr) 1.5rem;
  -webkit-column-gap: 1rem;
  column-gap: 1rem;
  row-gap: 0.1875rem;
  position: relative;
  white-space: nowrap;
}

.c4 {
  grid-area: label;
}

.c6 {
  grid-area: input;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #00224B;
}

.c11 {
  background-color: #FFFFFF;
  border-radius: 0.5rem;
  border: 1px solid;
  border-color: #A6B5BB;
  height: calc( 2.5rem * 1 + 1rem );
  width: 100%;
  box-sizing: border-box;
  z-index: 10;
  overflow-y: auto;
  display: none;
  padding: 0.5rem;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #00224B;
  font-size: 1.0625rem;
  font-weight: 400;
  line-height: 1.381rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
  padding: 1rem;
  gap: 0.5rem;
  line-height: 1;
  border-radius: 0.25rem;
  pointer-events: auto;
  height: 2.5rem;
}

.c13 {
  cursor: pointer;
  background-color: unset;
}

.c13:hover {
  background-color: #D7EBFF;
  color: #003FF2;
}

.c13:focus {
  background-color: #D7EBFF;
  color: #003FF2;
}

.c14 {
  visibility: hidden;
  position: absolute;
  top: 0;
  left: 0;
}

<div>
  <div
    class="c0"
  >
    <button
      aria-disabled="false"
      aria-expanded="false"
      aria-haspopup="true"
      aria-readonly="false"
      class="c1 c2"
      id="testLabel testContent"
      name="test"
      type="button"
    >
      <span
        class="c3 c4"
        id="testLabel"
      >
        test1
      </span>
      <div
        class="c5 c6"
        id="testContent"
        value="value1"
      >
        value1
      </div>
      <div
        class="c7 c8"
      >
        <div
          aria-hidden="true"
          aria-label=""
          class="c9"
          data-testid="Icon"
        />
      </div>
    </button>
    <div
      class="c10"
      data-popper-escaped="true"
      data-popper-placement="bottom-start"
      data-popper-reference-hidden="true"
      data-testid="Popper"
      style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 10px); width: 0px;"
    >
      <ul
        class="c11"
        role="list"
      >
        <li
          class="c12 c13"
          role="listitem"
          tabindex="-1"
        >
          
          value1
        </li>
      </ul>
    </div>
    <select
      class="c14"
      id="selecttest"
      name="test"
      readonly=""
    >
      <option
        value="value1"
      >
        value1
      </option>
    </select>
  </div>
</div>
`;

exports[`Render Select Component when has error and message error 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  width: 100%;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  height: 64px;
  gap: 0.5rem;
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: content-box;
  width: calc(100% - 2 * 1rem);
  border-radius: 8px;
  padding: 0.625rem 0.9375rem;
  background-color: #FFFFFF;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  box-shadow: 0px 0px 0px 3px #D93E3E3D;
  border: 1px solid;
  border-color: #D93E3EA3;
}

.c3 {
  color: #B33333;
  font-size: 0.8125rem;
  font-weight: 500;
  line-height: 1.056rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
  top: unset;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  line-height: 1.0625rem;
  text-align: left;
}

.c5 {
  color: #00224B;
  font-size: 1.0625rem;
  font-weight: 400;
  line-height: 1.381rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
  display: block;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  line-height: 1.375rem;
  text-align: left;
}

.c5:-webkit-autofill,
.c5:-internal-autofill-selected {
  -webkit-animation-name: onAutoFillStart;
  animation-name: onAutoFillStart;
  -webkit-text-fill-color: #455A73;
  box-shadow: inset 0 0 0 100em #FFFFFF;
}

.c5:not(:-webkit-autofill) {
  -webkit-animation-name: onAutoFillCancel;
  animation-name: onAutoFillCancel;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 1rem;
  gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #B33333;
  font-size: 0.8125rem;
  font-weight: 500;
  line-height: 1.056rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
  line-height: 1rem;
}

.c7 {
  display: block;
  height: 24px;
  width: 24px;
  position: relative;
  margin: 0.5625rem 0px;
}

.c9 {
  -webkit-mask-image: url(https://qa-static.cashme.com.br/icons/chevron-down.svg);
  mask-image: url(https://qa-static.cashme.com.br/icons/chevron-down.svg);
  background-color: #69788C;
  background-image: none;
  background-size: 24px;
  width: 24px;
  height: 24px;
  -webkit-mask-position-x: 0;
  mask-position-x: 0;
  -webkit-mask-size: 24px;
  mask-size: 24px;
  -webkit-mask-repeat: no-repeat;
  mask-repeat: no-repeat;
}

.c14 {
  -webkit-mask-image: url(https://qa-static.cashme.com.br/icons/info.svg);
  mask-image: url(https://qa-static.cashme.com.br/icons/info.svg);
  background-color: #A6B5BB;
  background-image: none;
  background-size: 12px;
  width: 12px;
  height: 12px;
  -webkit-mask-position-x: 0;
  mask-position-x: 0;
  -webkit-mask-size: 12px;
  mask-size: 12px;
  -webkit-mask-repeat: no-repeat;
  mask-repeat: no-repeat;
}

.c10 {
  visibility: hidden;
  pointer-events: none;
  opacity: 0;
  -webkit-transition: visibility 0.1s,opacity ease 0.3s;
  transition: visibility 0.1s,opacity ease 0.3s;
  z-index: 10;
}

.c10[data-Popper-reference-hidden='true'] {
  visibility: hidden;
  pointer-events: none;
}

.c8 {
  grid-area: icon;
}

.c2 {
  display: grid;
  grid-template: 'label icon' 1.0625rem 'input icon' 1.375rem / minmax(0,1fr) 1.5rem;
  -webkit-column-gap: 1rem;
  column-gap: 1rem;
  row-gap: 0.1875rem;
  position: relative;
  white-space: nowrap;
}

.c4 {
  grid-area: label;
}

.c6 {
  grid-area: input;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #455A73;
}

.c11 {
  background-color: #FFFFFF;
  border-radius: 0.5rem;
  border: 1px solid;
  border-color: #A6B5BB;
  height: calc( 2.5rem * 1 + 1rem );
  width: 100%;
  box-sizing: border-box;
  z-index: 10;
  overflow-y: auto;
  display: none;
  padding: 0.5rem;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #00224B;
  font-size: 1.0625rem;
  font-weight: 400;
  line-height: 1.381rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
  padding: 1rem;
  gap: 0.5rem;
  line-height: 1;
  border-radius: 0.25rem;
  pointer-events: auto;
  height: 3.5rem;
}

.c13 {
  cursor: pointer;
  background-color: unset;
}

.c13:hover {
  background-color: #D7EBFF;
  color: #003FF2;
}

.c13:focus {
  background-color: #D7EBFF;
  color: #003FF2;
}

.c15 {
  visibility: hidden;
  position: absolute;
  top: 0;
  left: 0;
}

<div>
  <div
    class="c0"
  >
    <button
      aria-disabled="false"
      aria-expanded="false"
      aria-haspopup="true"
      aria-readonly="false"
      class="c1 c2"
      id="testLabel testContent"
      name="test"
      type="button"
    >
      <span
        class="c3 c4"
        id="testLabel"
      >
        test1
      </span>
      <div
        class="c5 c6"
        id="testContent"
        value=""
      >
        placeholder
      </div>
      <div
        class="c7 c8"
      >
        <div
          aria-hidden="true"
          aria-label=""
          class="c9"
          data-testid="Icon"
        />
      </div>
    </button>
    <div
      class="c10"
      data-popper-escaped="true"
      data-popper-placement="bottom-start"
      data-popper-reference-hidden="true"
      data-testid="Popper"
      style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 10px); width: 0px;"
    >
      <ul
        class="c11"
        role="list"
      >
        <li
          class="c12 c13"
          role="listitem"
          tabindex="-1"
        >
          <div
            aria-hidden="true"
            aria-label=""
            class="c14 "
            data-testid="Icon"
          />
          test
        </li>
      </ul>
    </div>
    <select
      class="c15"
      id="selecttest"
      name="test"
      readonly=""
    >
      <option
        value="test"
      >
        test
      </option>
    </select>
    <div
      aria-live="assertive"
      class="c16"
    >
      some error here
    </div>
  </div>
</div>
`;

exports[`Render Select Component when has options icons, large options and informative message 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  width: 100%;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  height: 64px;
  gap: 0.5rem;
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: content-box;
  width: calc(100% - 2 * 1rem);
  border-radius: 8px;
  padding: 0.625rem 0.9375rem;
  background-color: #FFFFFF;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  box-shadow: 0px 0px 0px 3px #003FF229;
  border: 1px solid;
  border-color: #8DC6FF;
}

.c3 {
  color: #003FF2;
  font-size: 0.8125rem;
  font-weight: 500;
  line-height: 1.056rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
  top: unset;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  line-height: 1.0625rem;
  text-align: left;
}

.c5 {
  color: #00224B;
  font-size: 1.0625rem;
  font-weight: 400;
  line-height: 1.381rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
  display: block;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  line-height: 1.375rem;
  text-align: left;
}

.c5:-webkit-autofill,
.c5:-internal-autofill-selected {
  -webkit-animation-name: onAutoFillStart;
  animation-name: onAutoFillStart;
  -webkit-text-fill-color: #455A73;
  box-shadow: inset 0 0 0 100em #FFFFFF;
}

.c5:not(:-webkit-autofill) {
  -webkit-animation-name: onAutoFillCancel;
  animation-name: onAutoFillCancel;
}

.c7 {
  display: block;
  height: 24px;
  width: 24px;
  position: relative;
  margin: 0.5625rem 0px;
}

.c14 {
  -webkit-mask-image: url(https://qa-static.cashme.com.br/icons/info.svg);
  mask-image: url(https://qa-static.cashme.com.br/icons/info.svg);
  background-color: #A6B5BB;
  background-image: none;
  background-size: 12px;
  width: 12px;
  height: 12px;
  -webkit-mask-position-x: 0;
  mask-position-x: 0;
  -webkit-mask-size: 12px;
  mask-size: 12px;
  -webkit-mask-repeat: no-repeat;
  mask-repeat: no-repeat;
}

.c9 {
  -webkit-mask-image: url(https://qa-static.cashme.com.br/icons/chevron-up.svg);
  mask-image: url(https://qa-static.cashme.com.br/icons/chevron-up.svg);
  background-color: #003FF2;
  background-image: none;
  background-size: 24px;
  width: 24px;
  height: 24px;
  -webkit-mask-position-x: 0;
  mask-position-x: 0;
  -webkit-mask-size: 24px;
  mask-size: 24px;
  -webkit-mask-repeat: no-repeat;
  mask-repeat: no-repeat;
}

.c10 {
  visibility: visible;
  pointer-events: all;
  opacity: 1;
  -webkit-transition: visibility 0.1s,opacity ease 0.3s;
  transition: visibility 0.1s,opacity ease 0.3s;
  z-index: 10;
}

.c10[data-Popper-reference-hidden='true'] {
  visibility: hidden;
  pointer-events: none;
}

.c8 {
  grid-area: icon;
}

.c2 {
  display: grid;
  grid-template: 'label icon' 1.0625rem 'input icon' 1.375rem / minmax(0,1fr) 1.5rem;
  -webkit-column-gap: 1rem;
  column-gap: 1rem;
  row-gap: 0.1875rem;
  position: relative;
  white-space: nowrap;
}

.c4 {
  grid-area: label;
}

.c6 {
  grid-area: input;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #455A73;
}

.c11 {
  background-color: #FFFFFF;
  border-radius: 0.5rem;
  border: 1px solid;
  border-color: #A6B5BB;
  height: calc( 2.5rem * 1 + 1rem );
  width: 100%;
  box-sizing: border-box;
  z-index: 10;
  overflow-y: auto;
  display: block;
  padding: 0.5rem;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #00224B;
  font-size: 1.0625rem;
  font-weight: 400;
  line-height: 1.381rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
  padding: 1rem;
  gap: 0.5rem;
  line-height: 1;
  border-radius: 0.25rem;
  pointer-events: auto;
  height: 3.5rem;
}

.c13 {
  cursor: pointer;
  background-color: unset;
}

.c13:hover {
  background-color: #D7EBFF;
  color: #003FF2;
}

.c13:focus {
  background-color: #D7EBFF;
  color: #003FF2;
}

.c15 {
  visibility: hidden;
  position: absolute;
  top: 0;
  left: 0;
}

<div>
  <div
    class="c0"
  >
    <button
      aria-disabled="false"
      aria-expanded="true"
      aria-haspopup="true"
      aria-readonly="false"
      class="c1 c2"
      id="testLabel testContent"
      name="test"
      type="button"
    >
      <span
        class="c3 c4"
        id="testLabel"
      >
        test1
      </span>
      <div
        class="c5 c6"
        id="testContent"
        value=""
      >
        placeholder
      </div>
      <div
        class="c7 c8"
      >
        <div
          aria-hidden="true"
          aria-label=""
          class="c9"
          data-testid="Icon"
        />
      </div>
    </button>
    <div
      class="c10"
      data-popper-escaped="true"
      data-popper-placement="bottom-start"
      data-popper-reference-hidden="true"
      data-testid="Popper"
      style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 10px); width: 0px;"
    >
      <ul
        class="c11"
        role="list"
      >
        <li
          class="c12 c13"
          role="listitem"
          tabindex="-1"
        >
          <div
            aria-hidden="true"
            aria-label=""
            class="c14 "
            data-testid="Icon"
          />
          test
        </li>
      </ul>
    </div>
    <select
      class="c15"
      id="selecttest"
      name="test"
      readonly=""
    >
      <option
        value="test"
      >
        test
      </option>
    </select>
  </div>
</div>
`;

exports[`Render Select Component when is used with Formik 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  width: 100%;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  height: 64px;
  gap: 0.5rem;
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: content-box;
  width: calc(100% - 2 * 1rem);
  border-radius: 8px;
  padding: 0.625rem 0.9375rem;
  background-color: #FFFFFF;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  box-shadow: 0px 0px 0px 3px #003FF229;
  border: 1px solid;
  border-color: #8DC6FF;
}

.c3 {
  color: #455A73;
  font-size: 0.8125rem;
  font-weight: 500;
  line-height: 1.056rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
  top: unset;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  line-height: 1.0625rem;
  text-align: left;
}

.c5 {
  color: #00224B;
  font-size: 1.0625rem;
  font-weight: 400;
  line-height: 1.381rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
  display: block;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  line-height: 1.375rem;
  text-align: left;
}

.c5:-webkit-autofill,
.c5:-internal-autofill-selected {
  -webkit-animation-name: onAutoFillStart;
  animation-name: onAutoFillStart;
  -webkit-text-fill-color: #455A73;
  box-shadow: inset 0 0 0 100em #FFFFFF;
}

.c5:not(:-webkit-autofill) {
  -webkit-animation-name: onAutoFillCancel;
  animation-name: onAutoFillCancel;
}

.c7 {
  display: block;
  height: 24px;
  width: 24px;
  position: relative;
  margin: 0.5625rem 0px;
}

.c9 {
  -webkit-mask-image: url(https://qa-static.cashme.com.br/icons/chevron-down.svg);
  mask-image: url(https://qa-static.cashme.com.br/icons/chevron-down.svg);
  background-color: #69788C;
  background-image: none;
  background-size: 24px;
  width: 24px;
  height: 24px;
  -webkit-mask-position-x: 0;
  mask-position-x: 0;
  -webkit-mask-size: 24px;
  mask-size: 24px;
  -webkit-mask-repeat: no-repeat;
  mask-repeat: no-repeat;
}

.c10 {
  visibility: hidden;
  pointer-events: none;
  opacity: 0;
  -webkit-transition: visibility 0.1s,opacity ease 0.3s;
  transition: visibility 0.1s,opacity ease 0.3s;
  z-index: 10;
}

.c10[data-Popper-reference-hidden='true'] {
  visibility: hidden;
  pointer-events: none;
}

.c8 {
  grid-area: icon;
}

.c2 {
  display: grid;
  grid-template: 'label icon' 1.0625rem 'input icon' 1.375rem / minmax(0,1fr) 1.5rem;
  -webkit-column-gap: 1rem;
  column-gap: 1rem;
  row-gap: 0.1875rem;
  position: relative;
  white-space: nowrap;
}

.c4 {
  grid-area: label;
}

.c6 {
  grid-area: input;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #00224B;
}

.c11 {
  background-color: #FFFFFF;
  border-radius: 0.5rem;
  border: 1px solid;
  border-color: #A6B5BB;
  height: calc( 2.5rem * 1 + 1rem );
  width: 100%;
  box-sizing: border-box;
  z-index: 10;
  overflow-y: auto;
  display: none;
  padding: 0.5rem;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #00224B;
  font-size: 1.0625rem;
  font-weight: 400;
  line-height: 1.381rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
  padding: 1rem;
  gap: 0.5rem;
  line-height: 1;
  border-radius: 0.25rem;
  pointer-events: auto;
  height: 3.5rem;
}

.c13 {
  cursor: pointer;
  background-color: unset;
}

.c13:hover {
  background-color: #D7EBFF;
  color: #003FF2;
}

.c13:focus {
  background-color: #D7EBFF;
  color: #003FF2;
}

.c14 {
  visibility: hidden;
  position: absolute;
  top: 0;
  left: 0;
}

<form
  action="#"
>
  <div>
    <div
      class="c0"
    >
      <button
        aria-disabled="false"
        aria-expanded="false"
        aria-haspopup="true"
        aria-readonly="false"
        class="c1 c2"
        id="test2Label test2Content"
        name="test2"
        type="button"
      >
        <span
          class="c3 c4"
          id="test2Label"
        >
          test2
        </span>
        <div
          class="c5 c6"
          id="test2Content"
          value="value2"
        >
          value2
        </div>
        <div
          class="c7 c8"
        >
          <div
            aria-hidden="true"
            aria-label=""
            class="c9"
            data-testid="Icon"
          />
        </div>
      </button>
      <div
        class="c10"
        data-popper-escaped="true"
        data-popper-placement="bottom-start"
        data-popper-reference-hidden="true"
        data-testid="Popper"
        style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 10px); width: 0px;"
      >
        <ul
          class="c11"
          role="list"
        >
          <li
            class="c12 c13"
            role="listitem"
            tabindex="-1"
          >
            
            value2
          </li>
        </ul>
      </div>
      <select
        class="c14"
        id="selecttest2"
        name="test2"
        readonly=""
      >
        <option
          value="value2"
        >
          value2
        </option>
      </select>
    </div>
  </div>
</form>
`;

exports[`Render Select Component when keyboard keys are pressed 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  width: 100%;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  height: 64px;
  gap: 0.5rem;
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  position: relative;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: content-box;
  width: calc(100% - 2 * 1rem);
  border-radius: 8px;
  padding: 0.625rem 0.9375rem;
  background-color: #FFFFFF;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  box-shadow: 0px 0px 0px 3px #003FF229;
  border: 1px solid;
  border-color: #8DC6FF;
}

.c3 {
  color: #455A73;
  font-size: 0.8125rem;
  font-weight: 500;
  line-height: 1.056rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
  top: unset;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  line-height: 1.0625rem;
  text-align: left;
}

.c5 {
  color: #00224B;
  font-size: 1.0625rem;
  font-weight: 400;
  line-height: 1.381rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
  display: block;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  line-height: 1.375rem;
  text-align: left;
}

.c5:-webkit-autofill,
.c5:-internal-autofill-selected {
  -webkit-animation-name: onAutoFillStart;
  animation-name: onAutoFillStart;
  -webkit-text-fill-color: #455A73;
  box-shadow: inset 0 0 0 100em #FFFFFF;
}

.c5:not(:-webkit-autofill) {
  -webkit-animation-name: onAutoFillCancel;
  animation-name: onAutoFillCancel;
}

.c7 {
  display: block;
  height: 24px;
  width: 24px;
  position: relative;
  margin: 0.5625rem 0px;
}

.c9 {
  -webkit-mask-image: url(https://qa-static.cashme.com.br/icons/chevron-down.svg);
  mask-image: url(https://qa-static.cashme.com.br/icons/chevron-down.svg);
  background-color: #69788C;
  background-image: none;
  background-size: 24px;
  width: 24px;
  height: 24px;
  -webkit-mask-position-x: 0;
  mask-position-x: 0;
  -webkit-mask-size: 24px;
  mask-size: 24px;
  -webkit-mask-repeat: no-repeat;
  mask-repeat: no-repeat;
}

.c14 {
  -webkit-mask-image: url(https://qa-static.cashme.com.br/icons/info.svg);
  mask-image: url(https://qa-static.cashme.com.br/icons/info.svg);
  background-color: #A6B5BB;
  background-image: none;
  background-size: 12px;
  width: 12px;
  height: 12px;
  -webkit-mask-position-x: 0;
  mask-position-x: 0;
  -webkit-mask-size: 12px;
  mask-size: 12px;
  -webkit-mask-repeat: no-repeat;
  mask-repeat: no-repeat;
}

.c10 {
  visibility: hidden;
  pointer-events: none;
  opacity: 0;
  -webkit-transition: visibility 0.1s,opacity ease 0.3s;
  transition: visibility 0.1s,opacity ease 0.3s;
  z-index: 10;
}

.c10[data-Popper-reference-hidden='true'] {
  visibility: hidden;
  pointer-events: none;
}

.c8 {
  grid-area: icon;
}

.c2 {
  display: grid;
  grid-template: 'label icon' 1.0625rem 'input icon' 1.375rem / minmax(0,1fr) 1.5rem;
  -webkit-column-gap: 1rem;
  column-gap: 1rem;
  row-gap: 0.1875rem;
  position: relative;
  white-space: nowrap;
}

.c4 {
  grid-area: label;
}

.c6 {
  grid-area: input;
  overflow: hidden;
  text-overflow: ellipsis;
  color: #00224B;
}

.c11 {
  background-color: #FFFFFF;
  border-radius: 0.5rem;
  border: 1px solid;
  border-color: #A6B5BB;
  height: calc( 2.5rem * 3 + 1rem );
  width: 100%;
  box-sizing: border-box;
  z-index: 10;
  overflow-y: auto;
  display: none;
  padding: 0.5rem;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #00224B;
  font-size: 1.0625rem;
  font-weight: 400;
  line-height: 1.381rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  font-family: 'DM Sans',sans-serif;
  padding: 1rem;
  gap: 0.5rem;
  line-height: 1;
  border-radius: 0.25rem;
  pointer-events: auto;
  height: 3.5rem;
}

.c13 {
  cursor: pointer;
  background-color: unset;
}

.c13:hover {
  background-color: #D7EBFF;
  color: #003FF2;
}

.c13:focus {
  background-color: #D7EBFF;
  color: #003FF2;
}

.c15 {
  visibility: hidden;
  position: absolute;
  top: 0;
  left: 0;
}

<div>
  <div
    class="c0"
  >
    <button
      aria-disabled="false"
      aria-expanded="false"
      aria-haspopup="true"
      aria-readonly="false"
      class="c1 c2"
      id="testLabel testContent"
      name="test"
      type="button"
    >
      <span
        class="c3 c4"
        id="testLabel"
      >
        label
      </span>
      <div
        class="c5 c6"
        id="testContent"
        value="test0"
      >
        test0
      </div>
      <div
        class="c7 c8"
      >
        <div
          aria-hidden="true"
          aria-label=""
          class="c9"
          data-testid="Icon"
        />
      </div>
    </button>
    <div
      class="c10"
      data-popper-escaped="true"
      data-popper-placement="bottom-start"
      data-popper-reference-hidden="true"
      data-testid="Popper"
      style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 10px); width: 0px;"
    >
      <ul
        class="c11"
        role="list"
      >
        <li
          class="c12 c13"
          role="listitem"
          tabindex="-1"
        >
          <div
            aria-hidden="true"
            aria-label=""
            class="c14 "
            data-testid="Icon"
          />
          test0
        </li>
        <li
          class="c12 c13"
          role="listitem"
          tabindex="-1"
        >
          <div
            aria-hidden="true"
            aria-label=""
            class="c14 "
            data-testid="Icon"
          />
          test1
        </li>
        <li
          class="c12 c13"
          role="listitem"
          tabindex="-1"
        >
          <div
            aria-hidden="true"
            aria-label=""
            class="c14 "
            data-testid="Icon"
          />
          test2
        </li>
      </ul>
    </div>
    <select
      class="c15"
      id="selecttest"
      name="test"
      readonly=""
    >
      <option
        value="test0"
      >
        test0
      </option>
      <option
        value="test1"
      >
        test1
      </option>
      <option
        value="test2"
      >
        test2
      </option>
    </select>
  </div>
</div>
`;
